{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 82,
  "lineage": "55aa3636-7efc-b045-0a34-03b3d6307db6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030046b29e71cbae4",
            "arn": "arn:aws:ec2:us-east-1:905418292959:elastic-ip/eipalloc-030046b29e71cbae4",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-077478fe57e421304",
            "domain": "vpc",
            "id": "eipalloc-030046b29e71cbae4",
            "instance": "i-033861fb42d5a52e0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bec07fa61535298a",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-211-232-16.compute-1.amazonaws.com",
            "public_ip": "54.211.232.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_test_ec2",
            "aws_internet_gateway.my_test_igw",
            "aws_network_interface.my_test-ni",
            "aws_security_group.my_test_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_test_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:905418292959:instance/i-033861fb42d5a52e0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033861fb42d5a52e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bec07fa61535298a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bec07fa61535298a",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e81b90c449f57bc6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084b2936387131866",
            "tags": {
              "Name": "MyTestEC2"
            },
            "tags_all": {
              "Name": "MyTestEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c08ca56351607e52"
            ]
          },
          "dependencies": [
            "aws_network_interface.my_test-ni",
            "aws_security_group.my_test_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:internet-gateway/igw-0f35c5ecfff065397",
            "id": "igw-0f35c5ecfff065397",
            "owner_id": "905418292959",
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "vpc_id": "vpc-0eef360378f62bc09"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_test-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:network-interface/eni-0bec07fa61535298a",
            "id": "eni-0bec07fa61535298a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:e0:5f:c2:e1",
            "owner_id": "905418292959",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c08ca56351607e52"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084b2936387131866"
          },
          "dependencies": [
            "aws_security_group.my_test_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:route-table/rtb-0fb7ff0246a470e88",
            "id": "rtb-0fb7ff0246a470e88",
            "owner_id": "905418292959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f35c5ecfff065397",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef360378f62bc09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_test_igw",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5ee056b9dbe6e6",
            "route_table_id": "rtb-0fb7ff0246a470e88",
            "subnet_id": "subnet-084b2936387131866"
          },
          "dependencies": [
            "aws_internet_gateway.my_test_igw",
            "aws_route_table.public_rt",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:security-group/sg-0c08ca56351607e52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c08ca56351607e52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP",
            "name_prefix": "",
            "owner_id": "905418292959",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eef360378f62bc09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:subnet/subnet-084b2936387131866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084b2936387131866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418292959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyTestSubnet"
            },
            "tags_all": {
              "Name": "MyTestSubnet"
            },
            "vpc_id": "vpc-0eef360378f62bc09"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418292959:vpc/vpc-0eef360378f62bc09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ce81eba5e5d5ba1",
            "default_route_table_id": "rtb-08373d87191f9ac57",
            "default_security_group_id": "sg-04e2ddab2847ebb62",
            "dhcp_options_id": "dopt-0baab2066ac842d4b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eef360378f62bc09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08373d87191f9ac57",
            "owner_id": "905418292959",
            "tags": {
              "Name": "MyTestVPC"
            },
            "tags_all": {
              "Name": "MyTestVPC"
            }
          }
        }
      ]
    }
  ]
}